tests/build/cases/widget/module_path_malformed1.stderr
error: unexpected end of input, expected identifier
 --> cases/widget/module_path_malformed1.rs:3:17
  |
3 | #[widget($crate::)]
  |                 ^

error[E0432]: unresolved import `$crate`
 --> cases/widget/module_path_malformed1.rs:3:1
  |
3 | #[widget($crate::)]
  | ^^^^^^^^^^^^^^^^^^^ could not find `missing_widget_path` in the crate root
  |
  = note: this error originates in the macro `__widget_path__missing_widget_path__` (in Nightly builds, run with -Z macro-backtrace for more info)
