tests/build/cases/widget/module_path_malformed1.rs
use zero_ui::core::widget;

#[widget($crate::)]
pub mod test_widget {
    inherit!(zero_ui::core::widget_base::base);
}

fn main() {}
